# CommonLib

./: .gitignore  CMakeLists.txt  CommonLib.h  CommonLib.sln  CommonLib.vcxproj  CommonLib.vcxproj.filters  CryptoData.h  stdafx.h
Tests/TestCrypto/: TestCrypto.cpp  TestCrypto.vcxproj  TestCrypto.vcxproj.filters  TestXTS.cpp
Tests/TestLog/: CMakeLists.txt  TestLog.cpp  TestLog.vcxproj  TestLog.vcxproj.filters  TestZlib.cpp  stdafx.h
Tests/TestSQlite/: TestSQlite.cpp  TestSQlite.vcxproj  TestSQlite.vcxproj.filters
Tests/TestStr/: TestStr.cpp  TestStr.vcxproj
alloc/: alloc.h  simpleAlloc.cpp  stl_alloc.h
compress/EntropyCoders/: ArithmeticCoder.h  BaseACCoder.h  RangeCoder.h
compress/zlib/: ZCompressStream.cpp  ZCompressStream.h  ZDecompressStream.cpp  ZDecompressStream.h  ZStream.cpp  ZStream.h  ZlibUtil.cpp  ZlibUtil.h
compress/zstd/: ZstdCompressionStream.cpp  ZstdCompressionStream.h  ZstdDecompressionStream.cpp  ZstdDecompressionStream.h
crypto/: AESBase.cpp  AESBase.h  CryptoData.h  EmptyDataCipher.cpp  EmptyDataCipher.h  IDataCipher.h  XTSBlockChiper.cpp  XTSBlockChiper.h  crypto.h
crypto/Win32/: CryptoAlgoritmProvider.cpp  CryptoAlgoritmProvider.h  SymmetricKey.h
crypto/openssllib/: AESCipherSSL.cpp  AESCipherSSL.h  CryptoFactoryOpenSSL.cpp  CryptoFactoryOpenSSL.h  EnvCipher.cpp  EnvCipher.h  (+10 more)
data/: ByteArray.cpp  ByteArray.h
date/: DateUtil.cpp  DateUtil.h
exception/: ComExc.cpp  ComExc.h  PosixExc.cpp  PosixExc.h  WinExc.h  WinNtExc.cpp  WinNtExc.h  WinSockExc.cpp  WinSockExc.h  exc_base.cpp  exc_base.h
filesystem/: File.cpp  File.h  FilePosix.cpp  FilePosix.h  FileWin.cpp  FileWin.h  PathUtils.cpp  PathUtils.h  filesystem.h  filesystemPosix.cpp  filesystemWin.cpp
guid/: GuidLin.cpp  GuidLin.h  GuidWin.cpp  GuidWin.h  guid.h
log/: ConsoleLogWriter.cpp  ConsoleLogWriter.h  FileAsyncLogger.cpp  FileAsyncLogger.h  LogFileWriterBase.cpp  LogFileWriterBase.h  LogInfo.h  LogLinePerformer.cpp  LogLinePerformer.h  log.h  logger.cpp  logger.h
network/: AcceptedSocket.cpp  AcceptedSocket.h  AddrInfo.cpp  AddrInfo.h  BaseSocketIP.cpp  BaseSocketIP.h  ClientSocket.cpp  ClientSocket.h  CloseConnectionExc.h  NetworkStreamIoDev.cpp  NetworkStreamIoDev.h  OperationTimeoutExc.h  ServerSocket.cpp  ServerSocket.h  SocketAddr.cpp  SocketAddr.h  SocketUtil.cpp  SocketUtil.h  portable_endian.h
perf/: PerfCount.cpp  PerfCount.h
sqlitelib/: CryptoContext.cpp  CryptoContext.h  Database.h
str/: StrUtils.cpp  StrUtils.h  StringEncoding.cpp  StringEncoding.h  convertToString.cpp  convertToString.h  multibyte.cpp  multibyte.h  str.cpp  str.h
stream/: BitStream.cpp  BitStream.h  FileStream.cpp  FileStream.h  FixedBitStream.cpp  FixedBitStream.h  FixedMemoryStream.cpp  FixedMemoryStream.h  MemoryStream.cpp  MemoryStream.h  MemoryStreamBuffer.cpp  MemoryStreamBuffer.h  StreamBaseEmpty.h  StreamIO.cpp  StreamIO.h  WriteBitStream.cpp  WriteBitStream.h  io.h  stream.cpp  stream.h
synch/: PosixThread.cpp  PosixThread.h  SyncQueue.h  WinThread.cpp  WinThread.h  thread.cpp  thread.h
system/: DynamicLib.h
thread/: thread.cpp  thread.h
utils/: CRC.cpp  CRC.h  ObjHolder.h
(+42 files in other folders)
